# TTS-PDF-ReaderReloaded

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  skills-lock.json
src/pdfreader_reborn/cache/: __init__.py  adapter.py  lru.py
src/pdfreader_reborn/data/: document.py  pdf_loader.py
src/pdfreader_reborn/interface/: viewport.py
src/pdfreader_reborn/kernel/: __init__.py  hooks.py  kernel.py
src/pdfreader_reborn/plugins/: __init__.py  open_file.py
src/pdfreader_reborn/strings/: __init__.py  strings.py
src/pdfreader_reborn/ui/: button.py  icon.py  keyboard.py  signals.py  toolbar.py  viewer.py
tests/: conftest.py  test_main.py
tests/cache/: test_lru.py
tests/data/: test_document.py  test_pdf_loader.py
tests/interface/: test_viewport.py
tests/strings/: test_i18n.py
tests/ui/: test_button.py  test_icon.py  test_keyboard.py  test_main_window.py  test_signals.py  test_toolbar.py  test_viewer.py
